Updated the download page for relax version 1.3.4.

--- a/download.html
+++ b/download.html
@@ -71,13 +71,13 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current development release is relax version 1.3.3.</p>
+      <p>The current development release is relax version 1.3.4.</p>
 
       <p>The current stable release is relax version 1.2.15.</p>
 
-      <p>For most analysis types, relaxation curve fitting, model-free analysis, etc., the development release is adequate and recommended.  If there are problems, a bug report can be <a href="https://gna.org/bugs/?group=relax">lodged</a> or the stable releases used.</p>
+      <p>For most analysis types, relaxation curve fitting, model-free analysis, etc., the development release is stable and recommended.  If there are problems, a bug report can be <a href="https://gna.org/bugs/?group=relax">lodged</a> or the stable releases used.</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
     </div>
@@ -105,10 +105,10 @@
       <td>4694093</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>b5643dd0cf34a117d23d6420ad1caf9f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4753022</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>eaefc2ed50d59974ac954f65f0d2aad2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4871431</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
@@ -156,10 +156,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip" title="relax">relax-1.3.3.Win32.zip</a></td>
-      <td><tt><small>ed89aed4660361a7ef474d90d7a5c67b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5174384</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip" title="relax">relax-1.3.4.Win32.zip</a></td>
+      <td><tt><small>eceb7fba4514e9d0673a5ff61395779e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5358490</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
@@ -235,10 +235,10 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2" title="relax">relax-1.3.3.src.tar.bz2</a></td>
-      <td><tt><small>1ab43859327d3d6623a0bc8fcf64ee38</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4746723</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
+      <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4865068</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
@@ -249,10 +249,10 @@
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip" title="relax">relax-1.3.3.src.zip</a></td>
-      <td><tt><small>505f2ad7b93e59144c250d9143006f3a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5183341</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
+      <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5372921</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
@@ -311,28 +311,28 @@
       <td>4694093</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>b5643dd0cf34a117d23d6420ad1caf9f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4753022</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>eaefc2ed50d59974ac954f65f0d2aad2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4871431</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip" title="relax">relax-1.3.3.Win32.zip</a></td>
-      <td><tt><small>ed89aed4660361a7ef474d90d7a5c67b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5174384</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip" title="relax">relax-1.3.4.Win32.zip</a></td>
+      <td><tt><small>eceb7fba4514e9d0673a5ff61395779e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5358490</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2" title="relax">relax-1.3.3.src.tar.bz2</a></td>
-      <td><tt><small>1ab43859327d3d6623a0bc8fcf64ee38</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4746723</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
+      <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4865068</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip" title="relax">relax-1.3.3.src.zip</a></td>
-      <td><tt><small>505f2ad7b93e59144c250d9143006f3a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5183341</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
+      <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5372921</td>
     </tr>
 
     <tr><td><em>Stable 1.2 line</em></td></tr>
@@ -410,6 +410,32 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.4</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>eaefc2ed50d59974ac954f65f0d2aad2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4871431</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip" title="relax">relax-1.3.4.Win32.zip</a></td>
+      <td><tt><small>eceb7fba4514e9d0673a5ff61395779e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5358490</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
+      <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4865068</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
+      <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5372921</td>
     </tr>
 
     <tr><td><em>Version 1.3.3</em></td></tr>
