--- a/refs.html
+++ b/refs.html
@@ -63,37 +63,72 @@
 <div class="main">
  <div class="main_box">
   <h1>References</h1>
-   <ul class="ref_ul">
-    <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
+   <h2>The program relax</h2>
+    <ul class="ref_ul">
+     <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
 
-    <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
+     <li class="ref_li" id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
 
-    <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
+   <h2>Model-free analysis in relax</h2>
 
-    <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
+   <p>For a model-free analysis using relax, all of the following should be cited!</p>
 
-    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007).  Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em>, <strong>3</strong>(7), 483-494.  (<a href="http://dx.doi.org/10.1039/b702202f">abstract</a>)</li>
+   <h3>Original Lipari-Szabo theory</h3>
+    <ul class="ref_ul">
+     <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
 
-    <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
+     <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
+    </ul>
 
-    <li class="ref_li" id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+   <h3>Extended model-free theory</h3>
+    <ul class="ref_ul">
+     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
+    </ul>
 
-    <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
+   <h3>Model-free model selection</h3>
+    <ul class="ref_ul">
+     <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
+   <h3>Model-free model elimination</h3>
+    <ul class="ref_ul">
+     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
+   <h3>Model-free minimisation</h3>
+    <ul class="ref_ul">
+     <li class="ref_li">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
+   <h3>The new model-free analysis protocol</h3>
+    <ul class="ref_ul">
+     <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007).  Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em>, <strong>3</strong>(7), 483-494.  (<a href="http://dx.doi.org/10.1039/b702202f">abstract</a>)</li>
 
-    <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
+     <li class="ref_li">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
+   <h3>Comprehensive reference</h3>
+    <p>This PhD thesis expands on all of the d'Auvergne and Gooley references and describes model-free analysis and the program relax in more detail.</p>
+    <ul class="ref_ul">
+     <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
+    </ul>
 
-    <li class="ref_li" id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001).  A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
-   </ul>
+   <h2>Misc.</h2>
+    <ul class="ref_ul">
+     <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
+
+     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
+
+     <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
+
+     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
+
+     <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
+
+     <li class="ref_li" id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001).  A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
+    </ul>
 
  </div>
 </div>
