Added many of the new relax features to the 'features' webpage.

--- a/features.html
+++ b/features.html
@@ -84,6 +84,11 @@
      <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>)</li>
      <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> relaxation rates)</li>
      <li>Steady-state NOE calculation</li>
+     <li>Determination of absolute stereochemistry of flexible molecules (using isotropic and anisotropic NMR parameters (NOE, ROE, and RDC) combined with MD simulation or simulated annealing, and ORD)</li>
+     <li>The N-state model for investigating domain motions</li>
+     <li>The frame order theory</li>
+     <li>Conformational analysis of paramagnetically tagged sugars</li>
+     <li>Analysis of RDCs and PCSs using ensemble of structures (the N-state model of dynamics)</li>
     </ul>
 
   </div>
@@ -115,6 +120,7 @@
 
     <ul>
      <li><a href="http://hugin.ethz.ch/wuthrich/software/molmol/">MOLMOL</a> - 1D data can be mapped onto a structure either by the creation of MOLMOL macros or by direct control of the program.</li>
+     <li><a href="http://www.pymol.org/">PyMOL</a> - visualisation of diffusion tensors and cone models by using the software as a Python package.</li>
      <li><a href="http://plasma-gate.weizmann.ac.il/Grace">Grace</a> - any 2D data can be plotted.</li>
      <li><a href="http://www.opendx.org">OpenDX</a> - The chi-squared space of models with three parameters can be mapped and 3D images of the space produced.</li>
     </ul>
