Modified the download HTML page to promote the 1.3 line as being stable.
All of the 1.2.15 download links are now gone (except for the complete list at the end).

--- a/download.html
+++ b/download.html
@@ -71,11 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current development release is relax version 1.3.4.</p>
-
-      <p>The current stable release is relax version 1.2.15.</p>
-
-      <p>For most analysis types, relaxation curve fitting, model-free analysis, etc., the development release is stable and recommended.  If there are problems, a bug report can be <a href="https://gna.org/bugs/?group=relax">lodged</a> or the stable releases used.</p>
+      <p>The current stable release is relax version 1.3.4.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -110,18 +106,6 @@
       <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>4871431</td>
     </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4319248</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>21d2201b9f5b9b585a113199e182689b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4318396</td>
-    </tr>
   </tbody>
 </table>
 
@@ -130,11 +114,6 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.2/Python-2.6.2.tar.bz2">Python-2.6.2.tar.bz2</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
-          </ul>
-
-          <p>For the 1.3 releases, the following dependencies are also needed.</p>
-          <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.2: <a  href="http://download.gna.org/minfx/minfx-1.0.2.tar.bz2">minfx-1.0.2.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -161,12 +140,6 @@
       <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5358490</td>
     </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
-      <td><tt><small>1c30ff68127ad535011c0fbed41c8b8a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4640636</td>
-    </tr>
   </tbody>
 </table>
 
@@ -175,11 +148,6 @@
             <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2.msi">python-2.6.2.msi</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
-          </ul>
-
-          <p>For the 1.3 releases, the following dependencies are also needed.</p>
-          <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.2: <a  href="http://download.gna.org/minfx/minfx-1.0.2.zip">minfx-1.0.2.zip</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -207,11 +175,6 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2-macosx2009-04-16.dmg">python-2.6.2-macosx2009-04-16.dmg</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
-          </ul>
-
-          <p>For the 1.3 releases, the following dependencies are also needed.</p>
-          <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.2: <a  href="http://download.gna.org/minfx/minfx-1.0.2.tar.gz">minfx-1.0.2.tar.gz</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -233,7 +196,6 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
-    <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
       <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
@@ -241,24 +203,10 @@
       <td>4865068</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
-      <td><tt><small>8bada4d509741c1834945a5ccf0f91c5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4313126</td>
-    </tr>
-
-    <tr><td>Zip file</td></tr>
-    <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
       <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5372921</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
-      <td><tt><small>a335e89b82d7e540894f369031232126</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4599482</td>
     </tr>
   </tbody>
 </table>
@@ -268,11 +216,6 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.2/">Python 2.6.2 release page</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
-          </ul>
-
-          <p>For the 1.3 releases, the following dependencies are also needed.</p>
-          <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.2: <a  href="http://download.gna.org/minfx/minfx-1.0.2.tar.bz2">minfx-1.0.2.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -303,7 +246,6 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
-    <tr><td><em>1.3 development line</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>04d3fd17831fd924d112d56f42013782</small></tt></td>
@@ -333,38 +275,6 @@
       <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5372921</td>
-    </tr>
-
-    <tr><td><em>Stable 1.2 line</em></td></tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4319248</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>21d2201b9f5b9b585a113199e182689b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4318396</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
-      <td><tt><small>1c30ff68127ad535011c0fbed41c8b8a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4640636</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
-      <td><tt><small>8bada4d509741c1834945a5ccf0f91c5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4313126</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
-      <td><tt><small>a335e89b82d7e540894f369031232126</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4599482</td>
     </tr>
 
   </tbody>
@@ -401,7 +311,7 @@
 
       <p>Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
-      <h2>1.3 development line</h2>
+      <h2>The 1.3 line</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -570,7 +480,7 @@
   </tbody>
 </table>
 
-      <h2>Stable 1.2 line</h2>
+      <h2>The 1.2 line</h2>
 
 <table cellspacing="10">
   <tbody>
@@ -940,7 +850,7 @@
   </tbody>
 </table>
 
-      <h2>Stable 1.0 line</h2>
+      <h2>The 1.0 line</h2>
 
 <table cellspacing="10">
   <tbody>
