Updated the download page for relax 1.3.5.

--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current stable release is relax version 1.3.4.</p>
+      <p>The current stable release is relax version 1.3.5.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -95,16 +95,17 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>04d3fd17831fd924d112d56f42013782</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4852584</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>ed54f192648ff6ed81cb0488e5c5c101</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4937315</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>eaefc2ed50d59974ac954f65f0d2aad2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4871431</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>1fd2ff25cebd744a051e19e954d62db6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>5038283</td>
+    </tr>
     </tr>
   </tbody>
 </table>
@@ -135,10 +136,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip" title="relax">relax-1.3.4.Win32.zip</a></td>
-      <td><tt><small>eceb7fba4514e9d0673a5ff61395779e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5358490</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip" title="relax">relax-1.3.5.Win32.zip</a></td>
+      <td><tt><small>fc029f10dd519d8cc43e3b4bcdf86b44</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5637951</td>
     </tr>
   </tbody>
 </table>
@@ -197,16 +198,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
-      <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4865068</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2" title="relax">relax-1.3.5.src.tar.bz2</a></td>
+      <td><tt><small>053768221f43e858ec07b8bb4ba30343</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>5028247</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
-      <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5372921</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip" title="relax">relax-1.3.5.src.zip</a></td>
+      <td><tt><small>434aa16ef268088698116260c819762e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5658255</td>
     </tr>
   </tbody>
 </table>
@@ -234,55 +235,6 @@
 
 
 
-<!-- All current releases -->
-<div class="main_box">
-      <h1>All current releases</h1>
-
-<table cellspacing="10">
-  <tbody>
-    <tr>
-      <td><strong>Distribution package</strong></td>
-      <td><strong>MD5 checksum</strong></td>
-      <td><strong>GPG signature</strong></td>
-      <td><strong>File size (bytes)</strong></td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>04d3fd17831fd924d112d56f42013782</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4852584</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>eaefc2ed50d59974ac954f65f0d2aad2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4871431</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip" title="relax">relax-1.3.4.Win32.zip</a></td>
-      <td><tt><small>eceb7fba4514e9d0673a5ff61395779e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5358490</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2" title="relax">relax-1.3.4.src.tar.bz2</a></td>
-      <td><tt><small>421d92a998bfd359678d689e2f65fc62</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4865068</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip" title="relax">relax-1.3.4.src.zip</a></td>
-      <td><tt><small>202a94ca8d1ebb5491ab0c69771736cd</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5372921</td>
-    </tr>
-
-  </tbody>
-</table>
-  </div>
-
-
-
 <!-- Security -->
 <div class="main_box">
     <h1>Security</h1>
@@ -305,9 +257,9 @@
 
 
 
-<!-- Old releases -->
+<!-- All releases -->
   <div class="main_box">
-    <h1>Old releases</h1>
+    <h1>All releases</h1>
 
       <p>Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
@@ -320,6 +272,38 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.5</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>ed54f192648ff6ed81cb0488e5c5c101</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4937315</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>1fd2ff25cebd744a051e19e954d62db6</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>5038283</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip" title="relax">relax-1.3.5.Win32.zip</a></td>
+      <td><tt><small>fc029f10dd519d8cc43e3b4bcdf86b44</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5637951</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2" title="relax">relax-1.3.5.src.tar.bz2</a></td>
+      <td><tt><small>053768221f43e858ec07b8bb4ba30343</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>5028247</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip" title="relax">relax-1.3.5.src.zip</a></td>
+      <td><tt><small>434aa16ef268088698116260c819762e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.5.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5658255</td>
     </tr>
 
     <tr><td><em>Version 1.3.4</em></td></tr>
